Create the Header

--- a/package.json
+++ b/package.json
@@ -1,7 +1,9 @@
 {
   "name": "clone",
   "version": "1.0.0",
-  "source": ["src/index.html"],
+  "source": [
+    "src/index.html"
+  ],
   "scripts": {
     "start": "parcel",
     "build": "parcel build"
